--- a/study-app/q1-99.md
+++ b/study-app/q1-99.md
@@ -922,6 +922,10 @@ D: Add the auditor user accounts to two new custom IAM roles.
 
 Answer: A
 
+- Autid logs-> Admin Activity, Data Access, Policy Denied, System Event -> Logging.viewer
+- Admin Activity, Policy Denied, System Event -> Logging.viewer
+- Data Access -> Logging.privateLogViewer
+
 <hr />
 
 **Question 47** You need to set up permissions for a set of Compute Engine instances to enable them to write data into a particular Cloud Storage bucket. You want to follow Google-recommended practices. What should you do?
@@ -935,6 +939,14 @@ C: Create a service account and add it to the IAM role'storage.objectCreator' fo
 D: Create a service account and add it to the IAM role'storage.objectAdmin' for that bucket.
 
 Answer: A (or C)
+
+- Storage Object Creator (roles/storage.objectCreator)
+  > Allows users to create objects. Does not give permission to view, delete, or replace objects
+- Storage Object Admin (roles/storage.objectAdmin)
+  > Grants full control over objects, including listing, creating, viewing, and deleting objects
+- As per as the least privileage recommended by google, C is the correct Option, A is incorrect because the scope doesnt exist. B incorrect because it will give him full of control
+- [Cloud Storage - Scopes](https://cloud.google.com/storage/docs/authentication#oauth-scopes)
+  > read-only, read-write, full-control, cloud-platform.read.only, cloud-platform
 
 <hr />
 
@@ -991,6 +1003,13 @@ C: Reference the monitoring pod in a Deployment object.
 D: Reference the monitoring pod in a cluster initializer at the GKE cluster creation time.
 
 Answer: B
+
+> B is right: https://kubernetes.io/docs/concepts/workloads/controllers/daemonset/
+> Some typical uses of a DaemonSet are:
+
+running a cluster storage daemon on every node
+running a logs collection daemon on every node
+running a node monitoring daemon on every node
 
 <hr />
 
@@ -1067,6 +1086,13 @@ D: Verify that you are Billing Administrator for the billing account. Update the
 
 Answer: C
 
+**Billing Account Administrator**
+
+> roles/billing.admin
+> Purpose: Manage billing accounts (but not create them).
+> Level: Organization or billing account.
+> link and unlink projects and manage other user roles on the billing account.
+
 <hr />
 
 **Question 57**
@@ -1081,6 +1107,11 @@ C: Grant the service account the IAM Role of Compute Storage Admin in the projec
 D: When creating the VMs, set the service account's API scope for Compute Engine to read/write.
 
 Answer: C
+
+C is the correct answer.
+It took me a while to figure it out because I didn't understand how service accounts work across project. This article made it clear for me. https://gtseres.medium.com/using-service-accounts-across-projects-in-gcp-cf9473fef8f0
+
+You create the service account in proj-sa and take note of the service account email, then you go to proj-vm in IAM > ADD and add the service account's email as new member and give it the Compute Storage Admin role.
 
 <hr />
 
@@ -1192,6 +1223,29 @@ D: Increase the initial delay of the HTTP health check to 200 seconds.
 
 Answer: D
 
+[Autohealing behavior](https://cloud.google.com/compute/docs/instance-groups/autohealing-instances-in-migs#example_health_check_set_up)
+
+- In this example, a VM is marked as healthy if it returns successfully once. It is marked as unhealthy if it returns unsuccessfully 3 consecutive times.
+
+```
+gcloud compute health-checks create http example-check --port 80 \
+       --check-interval 30s \
+       --healthy-threshold 1 \
+       --timeout 10s \
+       --unhealthy-threshold 3
+```
+
+- Apply the health check by configuring an autohealing policy for your regional or zonal MIG.
+
+- The initial-delay setting delays autohealing from potentially prematurely recreating the VM if the VM is in the process of starting up. The initial delay timer starts when the VM's currentAction field changes to VERIFYING
+
+```
+gcloud compute instance-groups managed update my-mig \
+        --health-check example-check \
+        --initial-delay 300 \
+        --zone us-east1-b
+```
+
 <hr />
 
 **Question 65**
@@ -1206,6 +1260,9 @@ C: Select Compute Engine. Use preemptible VM instances of the appropriate standa
 D: Select Compute Engine. Use VM instance types that support micro bursting.
 
 Answer: C
+
+> - preemptible VMs can only run for up to 24 hours at a time,
+> - Preemptible VM instances are available at much lower price—a 60-91% discount—compared to the price of standard VMs.
 
 <hr />
 
@@ -1244,6 +1301,8 @@ D: Go to Cloud Shell and run gcloud config list to review the Google Cloud confi
 
 Answer: D
 
+> D. check project setting by gcloud config list
+
 <hr />
 
 **Question 68**
@@ -1259,6 +1318,16 @@ D: Create an instance group for the instance. Verify that the'Advanced creation 
 
 Answer: A
 
+- [Set host maintenance policy of a VM](https://cloud.google.com/compute/docs/instances/setting-vm-host-options#settingoptions)
+- onHostMaintenance: determines the behavior when a maintenance event occurs that might cause your VM to reboot.
+
+  > MIGRATE: causes Compute Engine to live migrate an instance when there is a maintenance event. This is the default value.
+  > TERMINATE: stops a VM instead of migrating it.
+
+- automaticRestart: determines the behavior when a VM crashes or is stopped by the system.
+  > true: Compute Engine restarts an instance if the instance crashes or is stopped. This is the default value.
+  > false: Compute Engine does not restart a VM if the VM crashes or is stopped.
+
 <hr />
 
 **Question 69**
@@ -1273,6 +1342,9 @@ C: Set Content-Type metadata to application/pdf on the PDF file objects.
 D: Add a label to the storage bucket with a key of Content-Type and value of application/pdf.
 
 Answer: C
+You can edit the following metadata for objects,
+
+- [content-type](https://cloud.google.com/storage/docs/metadata#content-type)
 
 <hr />
 
@@ -1341,7 +1413,7 @@ Answer: D
 **Question 74**
 Your company has a 3-tier solution running on Compute Engine. The configuration of the current infrastructure is shown below.
 
-<img></img>
+![](images/74.png)
 
 Each tier has a service account that is associated with all instances within it. You need to enable communication on TCP port 8080 between tiers as follows:
 
@@ -1360,6 +1432,12 @@ C: 1. Create an ingress firewall rule with the following settings: "¢ Targets: 
 D: 1. Create an egress firewall rule with the following settings: "¢ Targets: all instances "¢ Source filter: IP ranges (with the range set to 10.0.2.0/24) "¢ Protocols: allow TCP: 8080 2. Create an egress firewall rule with the following settings: "¢ Targets: all instances "¢ Source filter: IP ranges (with the range set to 10.0.1.0/24) "¢ Protocols: allow TCP: 8080
 
 Answer: B
+
+```
+Option A is wrong. The target IP ranges and the protocol ranges are too open.
+Option C is wrong. The protocol ranges are too open.
+Option D is wrong. The target IP ranges are too open.
+```
 
 <hr />
 
