--- a/study-app/q1-99.md
+++ b/study-app/q1-99.md
@@ -961,7 +961,16 @@ C: View the bucket in the Storage section of the GCP Console.
 D: Create a trace in Stackdriver to view the information.
 
 Answer: B
+https://cloud.google.com/storage/docs/audit-logging
 
+- B is correct.
+  In this scenario, you need to select data access audit logs in Cloud Logging.
+
+- Note the Stackdriver Logging is now named Cloud Logging.
+
+- B is the right ans. Activity log is not for data access audit logs, use log explorer for this purpose
+
+- Admin Activity, **Data access**, policy denied, System event
 <hr />
 
 **Question 49** You are the project owner of a GCP project and want to delegate control to colleagues to manage buckets and files in Cloud Storage. You want to follow Google- recommended practices. Which IAM roles should you grant your colleagues?
@@ -976,7 +985,17 @@ D: Storage Object Creator
 
 Answer: B
 
-<hr />
+- https://cloud.google.com/storage/docs/access-control/iam-roles#standard-roles
+
+- Storage Object Admin (roles/storage.objectAdmin)
+
+  > Grants full control over objects, including listing, creating, viewing, and deleting objects.
+
+- Storage Object Creator (roles/storage.objectCreator)
+  > Allows users to create objects. Does not give permission to view, delete, or replace objects.
+- Storage Admin (roles/storage.admin)
+  > Grants full control of buckets and objects.
+  <hr />
 
 **Question 50** You have an object in a Cloud Storage bucket that you want to share with an external company. The object contains sensitive data. You want access to the content to be removed after four hours. The external company does not have a Google account to which you can grant specific user-based access privileges. You want to use the most secure method that requires the fewest steps. What should you do?
 
