--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -149,6 +149,19 @@ D: Verify that you are project administrator. Select the associated billing acco
 
 Answer: A
 
+**Create a budget**
+https://cloud.google.com/billing/docs/how-to/budgets#create-budget
+
+**Permissions**
+
+- billing.budgets.create to create a new budget.
+- billing.budgets.get and billing.budgets.list to view all budgets for the Cloud Billing account.
+
+**IAM**
+
+- Billing Account Administrator
+- Billing Account Costs Manager
+
 <hr />
 
 **Question 110**
@@ -211,7 +224,6 @@ C: Select Regional Storage. Add a bucket lifecycle rule that archives data after
 D: Select Regional Storage. Add a bucket lifecycle rule that archives data after 30 days to Coldline Storage.
 
 Answer: D
-
 
 <hr />
 
@@ -1185,6 +1197,10 @@ C: Create a budget per project and configure budget alerts on all of these budge
 D: Create a single billing account for all sandbox projects and enable BigQuery billing exports. Create a Data Studio dashboard to plot the spending per project.
 
 Answer: C
+
+> is C, not A
+> with A, i guess if you create a single budget for all projects, together they can easily beat the $500 mark and you need to know if "one deveoper' did it.
+> so one budget per project is the solution.
 
 <hr />
 
