--- a/study-app/q51-99.md
+++ b/study-app/q51-99.md
@@ -84,20 +84,24 @@ You need to create a new billing account and then link it with an existing Googl
 
 A: Verify that you are Project Billing Manager for the GCP project. Update the existing project to link it to the existing billing account.
 
-B: Verify that you are Project Billing Manager for the GCP project. Create a new billing account and link the new billing account to the existing project.
+B: Verify that you are Project Billing Manager for the GCP project. Create a new billing account and link the new billing account to the existing project.\*\*
 
 C: Verify that you are Billing Administrator for the billing account. Create a new project and link the new project to the existing billing account.
 
 D: Verify that you are Billing Administrator for the billing account. Update the existing project to link it to the existing billing account.
 
-Answer: C
+Answer: C(correct is B)
 
-**Billing Account Administrator**
+- **Billing Account Administrator** (roles/billing.admin)
 
-> roles/billing.admin
-> Purpose: Manage billing accounts (but not create them).
-> Level: Organization or billing account.
-> link and unlink projects and manage other user roles on the billing account.
+  > Manage billing accounts (but not create them).
+
+- Project Billing Manager
+  > (roles/billing.projectManager)
+  > resourcemanager.projects.createBillingAssignment
+  > resourcemanager.projects.deleteBillingAssignment
+
+https://cloud.google.com/billing/docs/how-to/billing-access#overview-of-cloud-billing-roles-in-cloud-iam
 
 <hr />
 
@@ -537,6 +541,29 @@ D: Assign the engineering team the Billing Account User role on the billing acco
 
 Answer: C
 
+- Billing Account User (roles/billing.user)
+
+  > Link projects to billing accounts.
+
+  > This role allow a user to create new projects linked to the billing account on which the role is granted.
+
+  > Create new billable projects.
+
+- Project Billing Manager(roles/billing.projectManager)
+
+  > Link/unlink the project to/from a billing account.
+
+  > This role allows a user to attach the project to the billing account, but does not grant any rights over resources.
+
+```
+- Billing Account User (roles/billing.user) on the destination billing account
+- Project billing manager (roles/billing.projectManager) on the project
+```
+
+- https://cloud.google.com/billing/docs/how-to/billing-access
+- https://stackoverflow.com/questions/59559885/project-billing-manager-vs-billing-account-user-gcp#:~:text=Project%20Billing%20Manager%20is%20the,link%20projects%20to%20billing%20accounts.
+- https://cloud.google.com/billing/docs/how-to/billing-access#cloud-billing_access-control-examples
+
 <hr />
 
 **Question 81**
@@ -636,15 +663,8 @@ D: 1. Deploy your application on Cloud Run on GKE with the connectivity set to I
 
 Answer: C
 
-https://cloud.google.com/run/docs/securing/managing-access#make-service-public
-
-```
-gcloud run services add-iam-policy-binding [SERVICE_NAME] \
-  --member="allUsers" \
-  --role="roles/run.invoker"
-
-gcloud run deploy [SERVICE_NAME] ... --allow-unauthenticated
-```
+**Integrating with Pub/Sub**
+https://cloud.google.com/run/docs/tutorials/pubsub#integrating-pubsub
 
 <hr />
 
@@ -679,9 +699,13 @@ C: Migrate the acquired company's projects into your company's GCP organization.
 
 D: Create a new GCP organization and a new billing account. Migrate the acquired company's projects and your company's projects into the new GCP organization and link the projects to the new billing account.
 
-Answer: A
+Answer: A (A will be correct within 24 hours or B)
+
+https://cloud.google.com/resource-manager/docs/project-migration#permissions-billing
 
 - [Billing account permissions](https://cloud.google.com/resource-manager/docs/project-migration#permissions-billing)
+
+  > Cloud Billing accounts can be used across organization resources. Moving a project from one organization resource to another won't impact billing, and charges will continue against the old billing account.
 
 - https://fargyle.medium.com/google-cloud-platform-cross-org-billing-41c5db8fefa6
 
@@ -707,7 +731,17 @@ Answer: A
 
 - should not have access to table data
 - [roles/spanner.databaseReader](https://cloud.google.com/spanner/docs/iam#roles)
+
   > Read from the Cloud Spanner database.
+
+- Cloud Spanner Database Reader (roles/spanner.databaseReader)
+  > Read from the Cloud Spanner database.
+- Cloud Spanner Database User (roles/spanner.databaseUser)
+  > Read from and write to the Cloud Spanner database.
+  > View and update schema for the database.
+- https://cloud.google.com/monitoring/access-control#predefined_roles
+- Monitoring Viewer(roles/monitoring.viewer)
+  > Grants read-only access to Monitoring in the Google Cloud console and API.
 
 <hr />
 
@@ -734,22 +768,17 @@ resource.type="gce_instance"
 **Question 90**
 You are using Deployment Manager to create a Google Kubernetes Engine cluster. Using the same Deployment Manager deployment, you also want to create a DaemonSet in the kube-system namespace of the cluster. You want a solution that uses the fewest possible services. What should you do?
 
-A: Add the cluster's API as a new Type Provider in Deployment Manager, and use the new type to create the DaemonSet.
-
-B: Use the Deployment Manager Runtime Configurator to create a new Config resource that contains the DaemonSet definition.
-
-C: With Deployment Manager, create a Compute Engine instance with a startup script that uses kubectl to create the DaemonSet.
-
 D: In the cluster's definition in Deployment Manager, add a metadata that has kube-system as key and the DaemonSet manifest as value.
 
-Answer: C
+Answer: C (**A is correct**)
 
-- [Creating DaemonSets](https://cloud.google.com/kubernetes-engine/docs/concepts/daemonset#creating_daemonsets)
+- [Adding an API as a type provider](https://cloud.google.com/deployment-manager/docs/configuration/type-providers/creating-type-provider)
 
-  > kubectl create
+  > This page describes how to add an API to Google Cloud Deployment Manager as a type provider. To learn more about types and type providers, read the Types overview documentation.
 
-- [DaemonSet](https://cloud.google.com/kubernetes-engine/docs/concepts/daemonset)
-  > A DaemonSet ensures that all (or some) Nodes run a copy of a Pod.
+  > A type provider exposes all of the resources of a third-party API to Deployment Manager as base types that you can use in your configurations. These types must be directly served by a RESTful API that supports Create, Read, Update, and Delete (CRUD).
+
+- [Cloud Deployment Manager & Kubernetes](https://medium.com/google-cloud/cloud-deployment-manager-kubernetes-2dd9b8124223)
 
 <hr />
 
