--- a/study-app/q51-99.md
+++ b/study-app/q51-99.md
@@ -92,14 +92,16 @@ D: Verify that you are Billing Administrator for the billing account. Update the
 
 Answer: C(correct is B)
 
-- **Billing Account Administrator** (roles/billing.admin)
+**Billing Account Administrator (roles/billing.admin)**
 
-  > Manage billing accounts (but not create them).
+- Manage billing accounts (but not create them).
 
-- Project Billing Manager
-  > (roles/billing.projectManager)
-  > resourcemanager.projects.createBillingAssignment
-  > resourcemanager.projects.deleteBillingAssignment
+**Project Billing Manager(roles/billing.projectManager)**
+
+- resourcemanager.projects.createBillingAssignment
+- resourcemanager.projects.deleteBillingAssignment
+- Link/unlink the project to/from a billing account.
+- When granted in combination with the Billing Account User role, the Project Billing Manager role allows a user to attach the project to the billing account, but **does not** grant any rights over resources.
 
 https://cloud.google.com/billing/docs/how-to/billing-access#overview-of-cloud-billing-roles-in-cloud-iam
 
