--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -346,6 +346,10 @@ D: Add the group for the finance team to roles/billing project/Manager role.
 
 Answer: C
 
+- roles/billing.user: Link projects to billing accounts.
+- roles/billing.admin: Manage billing accounts (but not create them)
+- roles/billing.projectManager:Link/unlink the project to/from a billing account.
+- roles/billing.viewer : View billing account cost and pricing information, transactions, and billing
 <hr />
 
 **Question 121**
