--- a/study-app/q51-99.md
+++ b/study-app/q51-99.md
@@ -289,14 +289,18 @@ C: On the App Engine Versions page of the GCP Console, route 100% of the traffic
 
 D: Deploy the original version as a separate application. Then go to App Engine settings and split traffic between applications so that the original version serves 100% of the requests.
 
-Answer: D
+Answer: D (the correct is C)
 
-- Selected Answer: C
+- correct is C NOT D.
+  Option A is wrong as gcloud app restore was used for backup and restore and has been deprecated.Option B is wrong as there is no application revert functionality available.Option D is wrong as App Engine maintains version and need not be redeployed.
 
-  > route 100% of the traffic to the previous version
+- D - is wrong because there is only one app engine per project. C is correct, you have to split traffic
 
-- Correct option is C.
-  > AppEngine already creates a version for you. Also you do not create a application as one project is associated with one AppEngine application.
+- Correct option is C. AppEngine already creates a version for you. Also you do not create a application as one project is associated with one AppEngine application.
+
+**Links:**
+
+- https://www.examtopics.com/discussions/google/view/16707-exam-associate-cloud-engineer-topic-1-question-45-discussion/
 
 <hr />
 
@@ -313,7 +317,33 @@ D: Go to Cloud Shell and run gcloud config list to review the Google Cloud confi
 
 Answer: D
 
-> D. check project setting by gcloud config list
+https://cloud.google.com/appengine/docs/standard/reference/app-yaml?tab=node.js#top
+
+- The app.yaml file configures your App Engine app's settings. It is required to contain at least a runtime entry.
+
+- I would opt option D : as it would help to check the config details and Option A is not correct, as app.yaml would have only the runtime and script to run parameters and not the Project details
+
+```
+runtime: nodejs18 # required
+
+instance_class: F2 # Automatic scaling: (**F1**, F2, F4, F4_1G). Basic and manual scaling: (B1, **B2**, B4, B4_1G, B8)
+
+env_variables:
+  BUCKET_NAME: "example-gcs-bucket"
+
+handlers:
+- url: /stylesheets
+  static_dir: stylesheets
+
+- url: /.*
+  secure: always
+  redirect_http_response_code: 301
+  script: auto
+```
+
+https://cloud.google.com/appengine/docs/flexible/java/configuring-the-web-xml-deployment-descriptor
+
+- The web.xml file is only used when deploying a Java app to a runtime that includes the Eclipse Jetty 9/ servlet 3 server.
 
 <hr />
 
