--- a/study-app/q51-99.md
+++ b/study-app/q51-99.md
@@ -10,12 +10,21 @@ D: Reference the monitoring pod in a cluster initializer at the GKE cluster crea
 
 Answer: B
 
-> B is right: https://kubernetes.io/docs/concepts/workloads/controllers/daemonset/
-> Some typical uses of a DaemonSet are:
+- Kubernetes has several ways to deploy applications, including **deployments**, **DaemonSets** and **StatefulSets**. But each resource type has unique benefits, drawbacks and use cases.
+- Like deployments, DaemonSets are files. T
+  ```
+  apiVersion: apps/v1
+  kind: DaemonSet
+  metadata:
+  name: fluentd-elasticsearch
+  namespace: kube-system
+  labels:
+     k8s-app: fluentd-logging
+  ```
+- DaemonSets are most often used to run background software, such as a **monitoring agent**, on each node in a cluster. DaemonSets are **not typically used to deploy the main apps** hosted on Kubernetes.
 
-running a cluster storage daemon on every node
-running a logs collection daemon on every node
-running a node monitoring daemon on every node
+Links:
+https://www.techtarget.com/searchitoperations/tip/Compare-Kubernetes-StatefulSet-vs-deployment-vs-DaemonSet
 
 <hr />
 
@@ -47,6 +56,15 @@ D: Configure a single Stackdriver account for one of the projects. In Stackdrive
 
 Answer: C
 
+- In the Monitoring navigation pane, select settings Settings.[1]
+- Click Add GCP Projects and then select the projects that you want to add.[1]
+- "View metrics for multiple Cloud projects: C. - Nothing about groups [2]
+
+Links:
+
+1. https://cloud.google.com/monitoring/settings/multiple-projects#add-monitored-project
+2. https://www.examtopics.com/discussions/google/view/16702-exam-associate-cloud-engineer-topic-1-question-32-discussion/
+
 <hr />
 
 **Question 54**
@@ -76,6 +94,24 @@ C: Navigate to the project and then to the IAM section in the GCP Console. Revie
 D: Navigate to the project and then to the Roles section in the GCP Console. Review the roles and status.
 
 Answer: C
+
+- (gcloud iam roles list) When an organization or project is specified, this command lists the custom roles that are defined for that organization or project.
+  Otherwise, this command lists IAM's predefined roles.[1]
+
+```
+//To list custom roles for the organization 12345, run:
+gcloud iam roles list --organization=12345
+
+//To list custom roles for the project myproject, run:
+gcloud iam roles list --project=myproject
+
+//To list all predefined roles, run:
+gcloud iam roles list
+```
+
+**Links:**
+
+1. https://cloud.google.com/sdk/gcloud/reference/iam/roles/list
 
 <hr />
 
