--- a/study-app/q1-50.md
+++ b/study-app/q1-50.md
@@ -830,7 +830,15 @@ C: Set a Windows password in the GCP Console. Verify that a firewall rule for po
 
 D: Set a Windows username and password in the GCP Console. Verify that a firewall rule for port 3389 exists. Click the RDP button in the GCP Console, and supply the credentials to log in.
 
-Answer: B
+Answer: B (D is NOT correct so B is the answer.)
+
+- I tested this on on Compute Engine today by deploying a new instance. D is not correct. When you click the RDP button, you are asked to install a client or use the Windows RDP client if you are running Windows. There is no option to enter credentials or get an RDP session through the web interface.
+
+- If the VM instance has a public IP address and firewall rules permit RDP access, use an RDP client. For more information, see Microsoft Remote Desktop clients to connect to the Windows instance.[1]
+
+**Links:**
+
+1. https://cloud.google.com/compute/docs/instances/connecting-to-windows#before-you-begin
 
 <hr />
 
@@ -867,19 +875,26 @@ D: Execute the Deployment Manager template using the ""-preview option in the sa
 
 Answer: D
 
-https://cloud.google.com/sdk/gcloud/reference/deployment-manager/deployments
+- You can preview the update you want to make before committing any changes, with the Google Cloud CLI or the API.[1]
 
 ```js
-nano vm.yaml
-gcloud deployment-manager deployments create my-first-deployment --config vm.yaml
-gcloud deployment-manager deployments describe my-first-deployment
+//With the Google Cloud CLI, make an update request with the --preview parameter:
+gcloud deployment-manager deployments update example-deployment \
+    --config configuration-file.yaml \
+    --preview
 ```
+
+**Links:**
+
+1. https://cloud.google.com/deployment-manager/docs/deployments/updating-deployments#optional_preview_an_updated_configuration
 
 <hr />
 
 **Question 44**
 
 You are building a pipeline to process time-series data. Which Google Cloud Platform services should you put in boxes 1,2,3, and 4?
+
+![](images/44.jpg)
 
 A: Cloud Pub/Sub, Cloud Dataflow, Cloud Datastore, BigQuery
 
@@ -891,9 +906,24 @@ D: Cloud Pub/Sub, Cloud Dataflow, Cloud Bigtable, BigQuery
 
 **Answer: D**
 
-- https://www.examtopics.com/discussions/google/view/20453-exam-associate-cloud-engineer-topic-1-question-23-discussion/
-- Cloud Pub/Sub -> Cloud Dataflow -> Cloud Bigtable(Storage) -> BigQuery(Analytics)
-- Cloud Pub/Sub は Google が提供するメッセージングサービスです
+> D is correct
+> as per google docs.
+> https://cloud.google.com/bigtable/docs/schema-design-time-series#time-series-cloud-bigtable
+> Storing time-series data in Cloud **Bigtable** is a natural fit.
+
+> A time series is a collection of data that consists of measurements and the times when the measurements are recorded. Examples of time series include the following:
+
+- The plot of memory usage on your computer
+- Temperature over time on a news report
+- Stock market prices over a period of time
+
+> A good schema results in excellent performance and scalability, and a bad schema can lead to a poorly performing system. However, no single schema design provides the best fit for all use cases.
+
+> The basic design patterns for storing time-series data in **Bigtable** are as follows:
+
+**Links:**
+
+1. https://cloud.google.com/bigtable/docs/schema-design-time-series#time-series-cloud-bigtable
 
 <hr />
 
@@ -907,8 +937,16 @@ C: Create a Deployment Manager configuration file that copies the current App En
 
 D: Deploy your application again using gcloud and specify the project parameter with the new project name to create the new project.
 
-Answer: A
-https://cloud.google.com/sdk/gcloud/reference/app/deploy
+Answer: A (A is correct)
+
+> Correct is A.
+
+- Option B is wrong as the option to use gcloud app cp does not exist.
+- Option C is wrong as Deployment Manager does not copy the application, but allows you to specify all the resources needed for your application in a declarative format using yaml
+- Option D is wrong as gcloud app deploy would not create a new project. The project should be created before usage
+
+Links:
+https://www.examtopics.com/discussions/google/view/16693-exam-associate-cloud-engineer-topic-1-question-24-discussion/
 
 <hr />
 
@@ -948,7 +986,7 @@ Answer: A (or C)
   > Grants full control over objects, including listing, creating, viewing, and deleting objects
 - As per as the least privileage recommended by google, C is the correct Option, A is incorrect because the scope doesnt exist. B incorrect because it will give him full of control
 - [Cloud Storage - Scopes](https://cloud.google.com/storage/docs/authentication#oauth-scopes)
-  > read-only, read-write, full-control, cloud-platform.read.only, cloud-platform
+  > read-only, read-write, there is NO write_only
 
 <hr />
 
@@ -965,14 +1003,18 @@ D: Create a trace in Stackdriver to view the information.
 Answer: B
 https://cloud.google.com/storage/docs/audit-logging
 
-- B is correct.
-  In this scenario, you need to select data access audit logs in Cloud Logging.
-
+- B is correct. In this scenario, you need to select data access audit logs in Cloud Logging.
 - Note the Stackdriver Logging is now named Cloud Logging.
-
 - B is the right ans. Activity log is not for data access audit logs, use log explorer for this purpose
-
+- Cloud Storage: When Cloud Storage usage logs are enabled, Cloud Storage writes usage data to the Cloud Storage bucket, which generates Data Access audit logs for the bucket. The generated Data Access audit log has its caller identity redacted.[1]
 - Admin Activity, **Data access**, policy denied, System event
+- Cloud Audit Logs features Admin Activity logs documenting administrative events, and Data Access logs record accesses to your cloud data by your users.[2]
+
+**Links:**
+
+1. https://cloud.google.com/logging/docs/audit#types
+2. https://cloud.google.com/audit-logs
+
 <hr />
 
 **Question 49** You are the project owner of a GCP project and want to delegate control to colleagues to manage buckets and files in Cloud Storage. You want to follow Google- recommended practices. Which IAM roles should you grant your colleagues?
