--- a/study-app/q1-50.md
+++ b/study-app/q1-50.md
@@ -645,6 +645,38 @@ D: Automatic Scaling with min_idle_instances set to 3.
 
 Answer: D
 
+**App Engine scaling types**
+
+You specify the scaling type in your app's app.yaml.
+
+- Automatic (default)
+- Basic
+- Manual
+
+```
+automatic_scaling:
+  target_cpu_utilization: 0.65
+  min_instances: 5
+  max_instances: 100
+  min_pending_latency: 30ms
+  max_pending_latency: automatic
+  max_concurrent_requests: 50
+```
+
+- For example, if App Engine calculates that 5 instances are necessary to serve traffic, and min_idle_instances is set to 2, App Engine will run 7 instances (5, calculated based on traffic, plus 2 additional per min_idle_instances)."[3]
+
+- Automatic scaling creates instances based on request rate, response latencies, and other application metrics.
+
+- Basic scaling creates instances when your application receives requests. Each instance will be shut down when the application becomes idle. Basic scaling is ideal for work that is intermittent
+
+- Manual scaling specifies the number of instances that continuously run regardless of the load level.
+
+  **Links:**
+
+1. https://cloud.google.com/appengine/docs/standard/how-instances-are-managed#scaling_types
+2. https://cloud.google.com/appengine/docs/standard/reference/app-yaml?tab=node.js
+3. https://www.examtopics.com/discussions/google/view/20302-exam-associate-cloud-engineer-topic-1-question-9-discussion/
+
 <hr />
 
 **Question 31**
@@ -660,6 +692,15 @@ C: In the Google Cloud Platform Console, use the'create role from role' function
 D: In the Google Cloud Platform Console, use the'create role' functionality and select all applicable permissions.
 
 Answer: A
+
+```
+//To create a copy of an existing role spanner.databaseAdmin into a project with PROJECT_ID, run:
+gcloud iam roles copy --source="roles/spanner.databaseAdmin" --destination=CustomSpannerDbAdmin --dest-project=PROJECT_ID
+```
+
+Links:
+
+- https://cloud.google.com/sdk/gcloud/reference/iam/roles/copy#--destination
 
 <hr />
 
@@ -693,6 +734,39 @@ D: Create a docker image from the Dockerfile and upload it to Cloud Storage. Cre
 
 Answer: C
 
+**Hello App**
+
+- Dockerfile
+- main.go
+- Dockerfile is used to build the Docker image for the application.
+
+```
+// 1. Download the hello-app source code and Dockerfile by running the following commands:
+
+git clone https://github.com/GoogleCloudPlatform/kubernetes-engine-samples
+cd kubernetes-engine-samples/hello-app
+
+// 2. Build and tag the Docker image for hello-app:
+docker build -t us-cenral1-docker.pkg.dev/${PROJECT_ID}/hello-repo/hello-app:v1 .
+
+// 3. Run the docker images command to verify that the build was successful:
+docker images
+
+// Output
+REPOSITORY                                                 TAG     IMAGE ID       CREATED          SIZE
+us-west1-docker.pkg.dev/my-project/hello-repo/hello-app    v1      25cfadb1bf28   10 seconds ago   54 MB
+```
+
+> C is correct.
+> A can be eliminated because kubectl app \* is not a valid command
+> B can be eliminated because gcloud app deploy deploys on app engine, not on kubernetes (also it still requires a config file pointing to the image).
+> D is not correct, since you cannot deploy a container image directly from GCS
+
+**Links:**
+
+1. https://github.com/GoogleCloudPlatform/kubernetes-engine-samples/tree/main/hello-app
+2. https://www.examtopics.com/discussions/google/view/18826-exam-associate-cloud-engineer-topic-1-question-12-discussion/
+
 <hr />
 
 **Question 34**
@@ -725,6 +799,16 @@ D: gcloud deployment-manager resources update --config <deployment-config-path>
 
 Answer: B
 
+- This command will update a deployment with the new config file provided.
+
+```
+gcloud deployment-manager deployments update my-deployment --config=new_config.yaml
+```
+
+**Links:**
+
+1. https://cloud.google.com/sdk/gcloud/reference/deployment-manager/deployments/update
+
 <hr />
 
 **Question 36**
@@ -740,6 +824,29 @@ C: Use the command line to run a dry run query to estimate the number of bytes r
 D: Run a select count (\*) to get an idea of how many records your query will look through. Then convert that number of rows to dollars using the Pricing Calculator.
 
 Answer: B
+
+**Estimate query costs by Console**
+
+- When you enter a query in the Google Cloud console, the query validator verifies the query syntax and provides an estimate of the number of bytes read. You can use this estimate to calculate query cost in the Pricing Calculator.
+  ![](images/36.png)
+
+**Estimate query costs by bq command**
+
+When you run a query in the bq command-line tool, you can use the --dry_run flag to estimate the number of bytes read.
+
+```
+bq query \
+--use_legacy_sql=false \
+--dry_run \
+'SELECT
+  column1,
+  column2,
+  column3
+FROM
+  `project_id.dataset.table`
+LIMIT
+  1000'
+```
 
 <hr />
 
