--- a/study-app/q1-50.md
+++ b/study-app/q1-50.md
@@ -563,6 +563,19 @@ D: Create a managed instance group. Verify that the autoscaling setting is on.
 
 Answer: C
 
+- Autohealing lets you automatically restart apps that are compromised. It promptly detects failed instances and recreates them automatically, so clients can be served again. With autohealing, you no longer need to manually bring an app back to service after a failure.
+
+**The app includes the following Compute Engine components:[1]**
+
+- Health check: an HTTP health check policy used by the autohealer to detect failed VM instances.
+- Firewall rules: Google Cloud firewall rules let you allow or deny traffic to your instances.
+- Managed instance group: A group of instances running the same demo web service.
+- Instance template: A template used to create each instance in the instance group.
+
+**Links:**
+
+1. https://cloud.google.com/compute/docs/tutorials/high-availability-autohealing
+
 <hr />
 
 **Question 26**
@@ -578,6 +591,25 @@ C: Use kubectl config get-contexts to review the output.
 D: Use kubectl config use-context and kubectl config view to review the output.
 
 Answer: C
+
+```
+kubectl config get-contexts
+CURRENT   NAME          CLUSTER AUTHINFO           NAMESPACE
+*         white         white   dazwilkin
+          black         black   dazwilkin
+```
+
+```
+kubectl config use-context black
+Switched to context "black"
+kubectl config use-context white
+Switched to context "white"
+```
+
+- C is correct , Use kubectl config get-contexts to review the output : shows the clusters and the configurations and based on the output we can identify the inactive configurations
+
+**Links:**
+https://www.examtopics.com/discussions/google/view/20299-exam-associate-cloud-engineer-topic-1-question-5-discussion/
 
 <hr />
 
