--- a/study-app/q1-50.md
+++ b/study-app/q1-50.md
@@ -12,12 +12,49 @@ D: Generate a new SSH key pair. Give the private key to each member of your team
 
 Answer: C
 
-**Explanation**
+**There are two ways to enable OS login.**
 
-- SSH 認証手段 →password or keys
-- private key は誰にも教えてはいけない
-- public key is for identifying a user accessing a server
-- osAdminLogin allows administrative access
+**(1)Enable OS Login using Metadata:**
+
+1. Go to Compute Engine -> Metadata and create key and value.
+
+```
+Key: enable-oslogin
+Value: TRUE
+```
+
+2. Go to IAM and grant **roles/compute.osLogin** or **roles/compute.osAdminLogin**.
+
+**(2)Enable OS Login using SSH key:**
+
+1. Generate SSH key using below command.
+
+```
+// Generate SSH key
+ssh-keygen -t rsa -f ~/.ssh/hiroko-ssh -C hiroko -b 2048
+
+// ssh-keygen saves your private key file to ~/.ssh/KEY_FILENAME and your public key file to ~/.ssh/KEY_FILENAME.pub.
+hiroko@owners-MacBook-Pro ~ % cd .ssh
+hiroko@owners-MacBook-Pro .ssh % ls
+-rw-------   1 hiroko  staff  1856 Dec  9 22:00 hiroko-ssh     # my private key
+-rw-r--r--   1 hiroko  staff   388 Dec  9 22:00 hiroko-ssh.pub # my public key
+// View public ssh key
+cat hiroko-ssh.pub
+ssh-rsa AAAZHu+Sf3B3x0/2e6si3+IHbAlHIFEvNHrqtvPGE5rIuGL1Yf9OEcAJVNri2fdTj3YVn9ALWG887oJK9 hiroko
+```
+
+2. Go to Compute Engine -> Metadata. Then click on SSH KEYS tab. and add your public key.
+
+**Links:**
+
+1. https://www.youtube.com/watch?v=pGIR9Cq3-Kk
+2. https://cloud.google.com/compute/docs/connect/create-ssh-keys#create_an_ssh_key_pair
+3. https://cloud.google.com/compute/docs/oslogin/set-up-oslogin#configure_users
+4. https://cloud.google.com/compute/docs/oslogin/set-up-oslogin#enable_os_login
+
+![](images/os-login1.png)
+![](images/os-login2.png)
+![](images/os-login3.png)
 
 <hr />
 
