--- a/study-app/q1-50.md
+++ b/study-app/q1-50.md
@@ -55,6 +55,8 @@ ssh-rsa AAAZHu+Sf3B3x0/2e6si3+IHbAlHIFEvNHrqtvPGE5rIuGL1Yf9OEcAJVNri2fdTj3YVn9AL
 ![](images/os-login-1.png)
 ![](images/os-login-2.png)
 ![](images/os-login-3.png)
+![](images/os-login-meta.png)
+![](images/os-login-ssh-key.png)
 
 <hr />
 
