--- a/study-app/q1-50.md
+++ b/study-app/q1-50.md
@@ -74,9 +74,22 @@ Answer: B
 
 **Explanation**
 
+- https://cloud.google.com/vpc/docs/vpc#restricted-ranges
+
+**VPC (A Virtual Private Cloud)**
+
+- VPC networks, including their associated routes and firewall rules.
+- Subnets are regional resources.
+- Each subnet defines a range of IPv4 addresses. Subnets in custom mode VPC networks can also have a range of IPv6 addresses.
+- default, auto, custom
+- When an auto mode VPC network is created, one subnet from each region is automatically created within it. These automatically created subnets use a set of predefined IPv4 ranges that fit within the 10.128.0.0/9 CIDR block.
+- When a custom mode VPC network is created, no subnets are automatically created.
+
+Links:
+
 - 0.0.0.0/0 is a restricted range
 - https://cloud.google.com/vpc/docs/vpc#valid-ranges
-- https://cloud.google.com/vpc/docs/vpc#restricted-ranges
+
 <hr />
 
 **Question 3** You are a project owner and need your co-worker to deploy a new version of your application to App Engine. You want to follow Google’s recommended practices. Which IAM roles should you grant your co-worker?
