--- a/study-app/q1-50.md
+++ b/study-app/q1-50.md
@@ -146,7 +146,7 @@ B: Use "bq config set project" to set the default project.
 C: Use "gcloud generate config-url" to generate a URL to the Google Cloud Platform Console to set the default project.
 
 D: Use "bq generate config-url" to generate a URL to the Google Cloud Platform Console to set the default project.
-
+C
 Answer: A
 
 **Explanation**
@@ -157,6 +157,25 @@ B is not correct because the bq command-line tool assumes the gcloud configurati
 C is not correct because entering this command will not achieve the desired result and will generate an error.
 
 D is not correct because entering this command will not achieve the desired result and will generate an error.
+
+```
+bq ls
+bq ls coffee
+$ bq cp coffee.coffee_dataset coffee.coffee_dataset_copy2
+bq query 'select * from coffee.coffee_dataset'
+bq mk sport_dataset
+bq load --autodetect sports_dataaset.superbowls gs://doug-rehnstrom-public/superbowls-clean.csv
+bq ls sports_dataset.superbowls
+bq query 'select count(Game) as Win from sports_dataset.superbowls'
+bq rm -f sports_dataset.superbowls
+bq rm -f sports_dataset
+```
+
+**Links:**
+
+- https://www.youtube.com/watch?v=SIE7Zpwk8zw&list=PLuJRcdtonlDAN73rZsRk_eiJ0NU9h1Cms&index=84
+- https://www.youtube.com/watch?v=Lz1PZdtsJiM
+- https://www.kaggle.com/datasets/psycon/daily-coffee-price
 
 <hr />
 
@@ -464,14 +483,18 @@ D: Use "bq estimate" to determine the amount billed for a single query. Multiply
 
 Answer: B
 
-**Explanation**
-A is not correct because you should use bq, not gcloud, to estimate the amount of bytes read.
+```
+ bq query \
+--use_legacy_sql=false \
+--dry_run \
+'SELECT * from coffee.coffee_dataset'
+// Result
+Query successfully validated. Assuming the tables are not modified, running this query will process 304538 bytes of data.
+```
 
-B is correct because this is the correct way to estimate the yearly BigQuery querying costs.
+**Links:**
 
-C is not correct because you should use bq, not gcloud, to work with BigQuery.
-
-D is not correct because this will not give the amount billed for a query.
+https://cloud.google.com/bigquery/docs/dry-run-queries
 
 <hr />
 
@@ -543,6 +566,25 @@ Answer: C
 - B is not correct because this command is to create roles, not to assign them.
 - C is correct because Google recommends to use groups where possible.
 - D is not correct because this command is to create roles, not to assign them.
+
+**--member**
+
+- user|group|serviceAccount:email or domain:domain.
+- user:test-user@gmail.com
+- group:admins@example.com
+- serviceAccount:test123@example.domain.com
+- domain:example.domain.com
+
+```
+gcloud projects add-iam-policy-binding example-project-id-1 --member='user:test-user@gmail.com' --role='roles/editor'
+```
+
+```
+gcloud projects add-iam-policy-binding example-project-id-1 --member='serviceAccount:test-proj1@example.domain.com' --role='roles/editor'
+```
+
+**Links:**
+https://cloud.google.com/sdk/gcloud/reference/projects/add-iam-policy-binding
 
 <hr />
 
