--- a/study-app/q1-50.md
+++ b/study-app/q1-50.md
@@ -641,6 +641,18 @@ D: Select Cloud Spanner. Set up your instance as multi-regional.
 
 Answer: A
 
+- Point-in-time recovery is enabled by default when you create a new Cloud SQL instance.[1][2]
+- Point-in-time recovery uses binary logs. These logs update regularly and use storage space.[3]
+- In the event of an instance or zone failure, the standby instance becomes the new primary instance. Users are then rerouted to the new primary instance. This process is called a failover [4]
+- fail-over 障害迂回
+
+**Links:**
+
+1. https://cloud.google.com/sql/docs/mysql/backup-recovery/restore#tips-pitr
+2. https://cloud.google.com/sql/docs/mysql/backup-recovery/pitr#enablingpitr
+3. https://cloud.google.com/sql/docs/mysql/backup-recovery/pitr#disk-usage
+4. https://cloud.google.com/sql/docs/mysql/high-availability
+
 <hr />
 
 **Question 25**
