--- a/study-app/q1-50.md
+++ b/study-app/q1-50.md
@@ -977,14 +977,21 @@ bq query \
 --use_legacy_sql=false \
 --dry_run \
 'SELECT
-  column1,
-  column2,
-  column3
-FROM
-  `project_id.dataset.table`
-LIMIT
-  1000'
+   COUNTRY,
+   AIRPORT,
+   IATA
+ FROM
+   `project_id`.dataset.airports
+ LIMIT
+   1000'
 ```
+
+> Query successfully validated. Assuming the tables are not modified,
+> running this query will process 10918 bytes of data.
+
+**Links:**
+
+1. https://cloud.google.com/bigquery/docs/dry-run-queries
 
 <hr />
 
