--- a/study-app/q51-99.md
+++ b/study-app/q51-99.md
@@ -109,9 +109,16 @@ gcloud iam roles list --project=myproject
 gcloud iam roles list
 ```
 
+- A role is a group of permissions that you can assign to principals.
+
 **Links:**
 
 1. https://cloud.google.com/sdk/gcloud/reference/iam/roles/list
+
+**IAM page and Roles page**
+
+![](images/55-iam-section.png)
+![](images/55-roles-section.png)
 
 <hr />
 
@@ -453,6 +460,12 @@ C: Create 2 custom VPCs, each with a single subnet. Create each subnet in a diff
 D: Create 2 custom VPCs, each with a single subnet. Create each subnet in the same region and with the same CIDR range.
 
 Answer: A
+
+- When a custom mode VPC network is created, no subnets are **automatically** created. This type of network provides you with complete control over its subnets and IP ranges. You decide which subnets to create in regions that you choose by using IP ranges that you specify.[1]
+
+**Links:**
+
+1. https://cloud.google.com/vpc/docs/vpc#subnet-ranges
 
 <hr />
 
